<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/black"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/resultOnScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=""
            android:textSize="50sp"
            android:textStyle="bold"
            android:freezesText="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:paddingVertical="0dp"
            >

            <Button
                android:id="@+id/clearButton"
                android:backgroundTint="@color/red"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/clear" />

            <Button
                android:id="@+id/allClearButton"
                android:backgroundTint="@color/orange"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/AllClear" />

            <Button
                android:id="@+id/changeSignButton"
                android:backgroundTint="@color/cyan"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:accessibilityHeading="false"
                android:text="@string/Sign"
                android:layout_gravity="center_horizontal|center"
                android:visibility="visible" />

            <Button
                android:id="@+id/buttonPercent"
                android:backgroundTint="@color/cyan"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/Percent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:paddingVertical="0dp"
            >

            <Button
                android:id="@+id/buttonSinus"
                android:backgroundTint="@color/cyan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="15sp"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/Sinus" />

            <Button
                android:id="@+id/buttonCosinus"
                android:backgroundTint="@color/cyan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="15sp"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/Cosinus" />

            <Button
                android:id="@+id/buttonTangens"
                android:backgroundTint="@color/cyan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="15sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Tangens" />

            <Button
                android:id="@+id/buttonPow2"
                android:backgroundTint="@color/cyan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="18sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Power2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:paddingVertical="0dp"
            >

            <Button
                android:id="@+id/buttonLn"
                android:backgroundTint="@color/cyan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="15sp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/NaturalLog" />

            <Button
                android:id="@+id/buttonLog"
                android:backgroundTint="@color/cyan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="15sp"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/DecimalLog" />

            <Button
                android:id="@+id/buttonSqrt"
                android:backgroundTint="@color/cyan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="15sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Square" />

            <Button
                android:id="@+id/buttonPowY"
                android:backgroundTint="@color/cyan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="18sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/PowerY" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:paddingVertical="0dp"
            >

            <Button
                android:id="@+id/button7"
                android:backgroundTint="@color/lightBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/Seven" />

            <Button
                android:id="@+id/button8"
                android:backgroundTint="@color/lightBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/Eight" />

            <Button
                android:id="@+id/button9"
                android:backgroundTint="@color/lightBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_weight="1"
                android:text="@string/Nine" />

            <Button
                android:id="@+id/buttonPlus"
                android:backgroundTint="@color/darkBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:paddingVertical="0dp">

            <Button
                android:id="@+id/button4"
                android:backgroundTint="@color/lightBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Four" />

            <Button
                android:id="@+id/button5"
                android:backgroundTint="@color/lightBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Five" />

            <Button
                android:id="@+id/button6"
                android:backgroundTint="@color/lightBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Six" />

            <Button
                android:id="@+id/buttonMinus"
                android:backgroundTint="@color/darkBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:paddingVertical="0dp">

            <Button
                android:id="@+id/button1"
                android:backgroundTint="@color/lightBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/One" />

            <Button
                android:id="@+id/button2"
                android:backgroundTint="@color/lightBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Two" />

            <Button
                android:id="@+id/button3"
                android:backgroundTint="@color/lightBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Three" />

            <Button
                android:id="@+id/buttonMultiply"
                android:backgroundTint="@color/darkBlue"
                android:layout_width="0dp"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:paddingVertical="0dp">

            <Button
                android:id="@+id/buttonComa"
                android:backgroundTint="@color/darkBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Coma" />

            <Button
                android:id="@+id/button0"
                android:backgroundTint="@color/lightBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Zero" />

            <Button
                android:id="@+id/buttonEqual"
                android:backgroundTint="@color/orange"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Equal" />



            <Button
                android:id="@+id/buttonDivide"
                android:backgroundTint="@color/darkBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="20sp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Divide" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>